<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SystemUpdate</string>
    <string name="action_settings">Settings</string>
    <string name="update_check_title">Check for updates</string>
    <string name="available_updates_title">Available updates</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_all">Delete downloads</string>
    <string name="menu_system_info">System info</string>
    <string name="download_not_found">Download not found</string>

    <!-- deleting -->
    <string name="confirm_delete_dialog_title">Delete file</string>
    <string name="confirm_delete_dialog_message">You are about to delete the downloaded update file, OK to proceed?</string>
    <string name="confirm_delete_all_dialog_message">You are about to delete all downloaded update files, OK to proceed?</string>
    <string name="delete_single_update_success_message">Update {0} deleted</string>
    <string name="delete_updates_failure_message">There was an error deleting the update file</string>
    <string name="delete_updates_noFolder_message">Update folder not found</string>
    <string name="delete_updates_success_message">All downloaded updates deleted</string>

    <!-- System info strings -->
    <string name="sysinfo_device">Device:</string>
    <string name="sysinfo_running">Running:</string>
    <string name="sysinfo_last_check">Last check:</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_update">Update</string>
    <string name="dialog_close">Close</string>
    <string name="checking_for_updates">Checking for updates</string>
    
    <string name="current_system_info">Local System Info</string>
    <string name="check_current_system_info">check running system</string>
    <string name="server_system_info">Server System Info</string>
    <string name="check_server_system_info">check server system</string>
    <string name="general_update">General Upgrade</string>
    <string name="user_general_update">need your choice</string>
    <string name="one_key_update">OneKey Upgrade</string>
    <string name="user_one_key_update">one key done</string>
</resources>