<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The CyanogenMod Project

     Licensed under the GNU GPLv2 license

     The text of the license can be found in the LICENSE file
     or at https://www.gnu.org/licenses/gpl-2.0.txt
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    
    <Preference android:key="current_system_info"
        android:title="@string/current_system_info"
        android:summary="@string/check_current_system_info"
        />
    <Preference android:key="server_system_info"
        android:title="@string/server_system_info"
        android:summary="@string/check_server_system_info"
        />
        <Preference android:key="general_update"
        android:title="@string/general_update"
        android:summary="@string/user_general_update"
        />
    <Preference android:key="one_key_update"
        android:title="@string/one_key_update"
        android:summary="@string/user_one_key_update"
        />

</PreferenceScreen>
